<resources>
    <!--    APP    -->
    <string name="app_name">SafeCity</string>
    <string name="appImage">appImage</string>
    <!--    <string name="imgur_clientID" translatable="false">a5ee927b1b18f1e</string>-->

    <!--    Welcome    -->
    <string name="welcome">Welcome</string>
    <string name="slogan">For safer city!</string>

    <!--    Menu    -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="notes">Notes</string>
    <string name="about">About</string>
    <string name="anomaliesMap">Anomalies</string>
    <string name="typeFilter">Types</string>
    <string name="sensors">Sensors</string>
        <!--    Filter SubMenu    -->
        <string name="home_menu_typeFilter_alertDialogTitle">Choose an anomaly type</string>
        <string name="home_menu_typeFilter_alertDialogOk">OK</string>
        <string name="home_menu_typeFilter_alertDialogClear">Clear</string>
        <string name="home_menu_typeFilter_accident">Accident</string>
        <string name="home_menu_typeFilter_roadWork">Road Work</string>
        <string name="home_menu_typeFilter_roadObstacle">Road Obstacle</string>
        <string name="home_menu_typeFilter_traffic">Traffic</string>
        <string name="home_menu_typeFilter_roadPothole">Road Pothole</string>

    <!--    Note Recycler    -->
    <!--    <string name="recycler_note_title">Login</string>-->
    <!--    <string name="recycler_note_description">Register</string>-->

    <!--    Insert Note    -->
    <string name="insert_note_screenTitle">Insert Note</string>
    <!--    <string name="insert_note_noteTitle">Title</string>-->
    <string name="insert_note_noteTitle_editText">Enter a title</string>
    <!--    <string name="insert_note_noteDesc">Description</string>-->
    <string name="insert_note_noteDesc_editText">Enter a description</string>
    <string name="empty_not_saved">Error</string>
    <string name="button_saveNote">Save</string>
    <string name="insert_note_ObligationError">Field can´t be empty</string>
    <string name="insert_note_titleLengthError">Title too long</string>
    <string name="insert_note_descLengthError">Description too long</string>

    <!--    Edit Note    -->
    <string name="edit_note_screenTitle">Edit Note</string>
    <!--    <string name="edit_note_noteTitle">Title</string>-->
    <string name="edit_note_noteTitle_editText">Title</string>
    <!--    <string name="edit_note_noteDesc">Description</string>-->
    <string name="edit_note_noteDesc_editText">Description</string>
    <string name="edit_note_ObligationError">Field can´t be empty</string>
    <string name="edit_note_titleLengthError">Title too long</string>
    <string name="edit_note_descLengthError">Description too long</string>

    <!--    Recycler Notes    -->
    <string name="recycler_notes_myNotes">My notes</string>
    <string name="recycler_notes_deleteAllNotes">Delete all</string>
    <string name="recycler_notes_newNote">New</string>
    <string name="recycler_notes_emptyNotes">Create your personal notes</string>

    <!--    Note Delete Popup    -->
    <string name="note_delete_popup_title">Delete</string>
    <string name="note_delete_popup_message">These changes cannot be reversed!</string>
    <string name="note_delete_popup_yes">Yes</string>
    <string name="note_delete_popup_cancel">Cancel</string>

    <!--    Notes Delete Popup    -->
    <string name="notes_delete_popup_title">Delete all Notes?</string>
    <string name="notes_delete_popup_message">These changes cannot be reversed!</string>
    <string name="notes_delete_popup_yes">Yes</string>
    <string name="notes_delete_popup_cancel">Cancel</string>

    <!--    Login    -->
    <string name="login_loginTitle">Login</string>
    <string name="login_username_hint">Enter a username</string>
    <string name="login_username_ObligationError">Verify that you have entered a username</string>
    <string name="login_password_hint">Enter a password</string>
    <string name="login_password_ObligationError">Verify that you have entered a password</string>
    <string name="login_buttonLogin">Login</string>
    <string name="login_failedLoginError">Username or password is incorrect!</string>
    <!--    Login Shared Preferences    -->
    <string name="login_preference_file">loginPreferenceFile</string>
    <string name="logged">logged</string>
    <string name="loggedUsername">loggedUsername</string>
    <string name="loggedUserID">loggedUserID</string>

    <!--    Marker Info Window    -->
    <string name="marker_clickMessage">Click to more details</string>

    <!--    Home    -->
    <string name="home_satellite_radioButton">Satellite</string>
    <string name="home_normal_radioButton">Normal</string>
    <string name="home_newAnomaly">New Anomaly</string>

    <!--    Insert Anomaly    -->
    <string name="insert_anomaly_screenTitle">Report Anomaly</string>
    <string name="insert_anomaly_title_editText">Enter a title</string>
    <string name="insert_anomaly_description_editText">Enter a description</string>
    <!-- <string name="insert_anomaly_photo_button">Enter photo</string> -->
    <string name="insert_anomaly_saveAnomaly_button">Save</string>
    <string name="insert_anomaly_spinnerDefaultValue">Select type</string>
    <string name="insert_anomaly_TypeTextView">Type</string>
    <string name="insert_anomaly_ObligationError">Field can´t be empty</string>
    <string name="insert_anomaly_titleLengthError">Title too long</string>
    <string name="insert_anomaly_descLengthError">Description too long</string>
    <string name="insert_anomaly_emptySpinnerMessage">Select an anomaly type</string>
    <string name="insert_anomaly_uploadPhotoMessage">Upload an image</string>
    <string name="insert_anomaly_fileChooserMessage">Select a file</string>

    <!--    Visualize Anomaly    -->
    <string name="visualize_anomaly_screenTitle">Anomaly</string>
    <string name="visualize_anomaly_anomalyPhoto">Photo</string>
    <string name="visualize_anomaly_anomalyTitle_textInputLayout">Title</string>
    <string name="visualize_anomaly_anomalyDesc_textInputLayout">Description</string>
    <string name="visualize_anomaly_TypeTextView">Type</string>
    <string name="visualize_anomaly_editButton">Edit</string>
    <string name="visualize_anomaly_deleteButton">Delete</string>
    <string name="visualize_anomaly_saveAnomaly_button">Save</string>
    <string name="visualize_anomaly_anomalyLat">Latitude:</string>
    <string name="visualize_anomaly_anomalyLng">Longitude:</string>
    <string name="visualize_anomaly_emptySpinnerMessage">Select an anomaly type</string>
    <string name="visualize_anomaly_fileChooserMessage">Select a file</string>
        <!--    Anomaly Delete Popup    -->
        <string name="visualize_anomaly_delete_popup_title">Delete</string>
        <string name="visualize_anomaly_delete_popup_message">These changes cannot be reversed!</string>
        <string name="visualize_anomaly_delete_popup_yes">Yes</string>
        <string name="visualize_anomaly_delete_popup_cancel">Cancel</string>
        <!--    Update Anomaly    -->
        <string name="update_anomaly_ObligationError">Field can´t be empty</string>
        <string name="update_anomaly_titleLengthError">Title too long</string>
        <string name="update_anomaly_descLengthError">Description too long</string>
        <!--    SeekBar Thumb     -->
        <string name="thumb_all">All</string>
        <string name="thumb_500m">500 m</string>
        <string name="thumb_1km">1 km</string>
        <string name="thumb_5km">5 km</string>
        <string name="thumb_10km">10 km</string>
        <string name="thumb_more10km">>10 km</string>

    <!--    Sensors    -->
    <string name="lightSensorText">Sensor:</string>
    <string name="brightness_0">Black</string>
    <string name="brightness_1_10">Dark Gray</string>
    <string name="brightness_11_5000">Gray</string>
    <string name="brightness_5001_25000">Light Gray</string>
    <string name="brightness_blind">White</string>

    <string name="accelerometerUpDown">Up/Down: </string>
    <string name="accelerometerLeftRight">Left/Right: </string>
</resources>