<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:padding="0dp">

    <TextView
        android:id="@+id/insert_anomaly_screenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/insert_anomaly_screenTitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/insert_anomaly_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        android:scrollbarSize="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_screenTitle"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insert_anomaly_title_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/insert_anomaly_title_editText"
                app:boxBackgroundColor="@color/light_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body2"
                app:hintTextColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textColorHint="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insert_anomaly_description_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/insert_anomaly_description_editText"
                app:boxBackgroundColor="@color/light_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="160"
                app:counterTextColor="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:hintTextColor="#BCBCBC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_title_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/insert_anomaly_TypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/insert_anomaly_TypeTextView"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/insert_anomaly_type_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/insert_anomaly_type_spinner" />

            <Spinner
                android:id="@+id/insert_anomaly_type_spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/light_gray"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/insert_anomaly_TypeTextView"
                app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_emptySpinnerMessage" />

            <!--            <Button-->
            <!--                android:id="@+id/insert_anomaly_photo_button"-->
            <!--                android:layout_width="130dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:layout_marginBottom="16dp"-->
            <!--                android:text="@string/insert_anomaly_photo_button"-->
            <!--                android:textSize="12sp"-->
            <!--                android:textStyle="bold"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_uploadPhoto" />-->

            <TextView
                android:id="@+id/insert_anomaly_emptySpinnerMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/insert_anomaly_emptySpinnerMessage"
                android:textColor="#FF0000"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_description_textInputLayout" />

            <ImageView
                android:id="@+id/insert_anomaly_uploadPhoto"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="#676767"
                android:contentDescription="@string/insert_anomaly_uploadPhotoMessage"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_type_spinner"
                app:srcCompat="@drawable/upload_vector"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/insert_anomaly_uploadPhotoMessage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="181dp"
                android:text="@string/insert_anomaly_uploadPhotoMessage"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/insert_anomaly_uploadPhoto"
                app:layout_constraintEnd_toEndOf="@+id/insert_anomaly_uploadPhoto"
                app:layout_constraintStart_toStartOf="@+id/insert_anomaly_uploadPhoto"
                app:layout_constraintTop_toTopOf="@+id/insert_anomaly_uploadPhoto" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/insert_anomaly_saveAnomaly_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/insert_anomaly_saveAnomaly_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_anomaly_ScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>